--- a/app/src/main/res/layout/onboarding_view.xml
+++ b/app/src/main/res/layout/onboarding_view.xml
@@ -46,15 +46,8 @@
         android:id="@+id/PlayBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_16"
-        android:backgroundTint="@color/orange"
-        app:cornerRadius="24dp"
-        android:paddingStart="@dimen/padding_30"
-        android:paddingEnd="@dimen/padding_30"
-        android:paddingTop="@dimen/margin_16"
-        android:paddingBottom="@dimen/margin_16"
         android:text="@string/Play"
-        android:textColor="@color/colorWhite"
+        android:theme="@style/PrimaryButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
