--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,9 +12,16 @@
     </style>
 
     <style name="PrimaryButton">
-    <item name="android:fontFamily">@font/bold</item>
-    <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/bold</item>
+        <item name="android:textColor">@color/white</item>
         <item name="background">@drawable/primary_button</item>
+        <item name="android:layout_marginBottom">@dimen/margin_16</item>
+        <item name="android:backgroundTint">@color/orange</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:paddingStart">@dimen/padding_30</item>
+        <item name="android:paddingEnd">@dimen/padding_30</item>
+        <item name="android:paddingTop">@dimen/margin_16</item>
+        <item name="android:paddingBottom">@dimen/margin_16</item>
     </style>
     <style name="permalink">
         <item name="android:fontFamily">@font/bold</item>
