--- a/app/src/main/res/xml/oboarding_main_scene.xml
+++ b/app/src/main/res/xml/oboarding_main_scene.xml
@@ -40,7 +40,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/page_indicator"/>
+            app:layout_constraintTop_toBottomOf="@+id/page_indicator"
+            android:layout_marginBottom="50dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
