--- a/app/src/main/res/layout/cardlayout.xml
+++ b/app/src/main/res/layout/cardlayout.xml
@@ -5,13 +5,15 @@
     android:id="@+id/card_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_gravity="bottom|center"
     android:layout_marginBottom="16dp"
+    android:foregroundGravity="bottom|center"
     app:cardBackgroundColor="#00FFFFFF"
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp"
     app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="false"
+    app:layout_anchorGravity="bottom|center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardLayout"
@@ -23,16 +25,19 @@
 
         <ImageView
             android:id="@+id/cardImage"
-            android:layout_width="wrap_content"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
             android:layout_weight="1"
             android:adjustViewBounds="false"
+            android:cropToPadding="true"
             android:foregroundGravity="center_vertical|clip_horizontal|center"
+            android:scaleType="centerInside"
             android:src="@drawable/letter_a"
+            app:layout_constraintBottom_toTopOf="@+id/cardTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +57,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cardImage" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/attributename1"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
 
@@ -60,14 +65,14 @@
             android:text="TextView"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/textView11"
-            app:layout_constraintEnd_toStartOf="@+id/textView11"
+            app:layout_constraintBottom_toBottomOf="@+id/attributevalue1"
+            app:layout_constraintEnd_toStartOf="@+id/attributevalue1"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView1"
-            app:layout_constraintTop_toTopOf="@+id/textView11" />
+            app:layout_constraintTop_toTopOf="@+id/attributevalue1" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/attributevalue1"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
@@ -78,26 +83,23 @@
             android:textColor="@color/orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView1"
+            app:layout_constraintStart_toEndOf="@+id/attributename1"
             app:layout_constraintTop_toBottomOf="@+id/cardTitle" />
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/textView1"
-            app:layout_constraintEnd_toStartOf="@+id/textView1"
+            app:layout_constraintBottom_toBottomOf="@+id/attributename1"
+            app:layout_constraintEnd_toStartOf="@+id/attributename1"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView1"
+            app:layout_constraintTop_toTopOf="@+id/attributename1"
             app:srcCompat="@drawable/arrow" />
 
 
-
-
-
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/attributename2"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
 
@@ -105,14 +107,14 @@
             android:text="TextView"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/textView22"
-            app:layout_constraintEnd_toStartOf="@+id/textView22"
+            app:layout_constraintBottom_toBottomOf="@+id/attributevalue2"
+            app:layout_constraintEnd_toStartOf="@+id/attributevalue2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/textView22" />
+            app:layout_constraintTop_toTopOf="@+id/attributevalue2" />
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/attributevalue2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
@@ -123,26 +125,23 @@
             android:textColor="@color/orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintStart_toEndOf="@+id/attributename2"
+            app:layout_constraintTop_toBottomOf="@+id/attributevalue1" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2"
-            app:layout_constraintEnd_toStartOf="@+id/textView2"
+            app:layout_constraintBottom_toBottomOf="@+id/attributename2"
+            app:layout_constraintEnd_toStartOf="@+id/attributename2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/attributename2"
             app:srcCompat="@drawable/arrow" />
 
 
-
-
-
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/attributename3"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
 
@@ -150,14 +149,14 @@
             android:text="TextView"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/textView33"
-            app:layout_constraintEnd_toStartOf="@+id/textView33"
+            app:layout_constraintBottom_toBottomOf="@+id/attributevalue3"
+            app:layout_constraintEnd_toStartOf="@+id/attributevalue3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/textView33" />
+            app:layout_constraintTop_toTopOf="@+id/attributevalue3" />
 
         <TextView
-            android:id="@+id/textView33"
+            android:id="@+id/attributevalue3"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
@@ -168,27 +167,23 @@
             android:textColor="@color/orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView22" />
+            app:layout_constraintStart_toEndOf="@+id/attributename3"
+            app:layout_constraintTop_toBottomOf="@+id/attributevalue2" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintBottom_toBottomOf="@+id/attributename3"
+            app:layout_constraintEnd_toStartOf="@+id/attributename3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/attributename3"
             app:srcCompat="@drawable/arrow" />
 
 
-
-
-
-
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/attributename4"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
 
@@ -196,14 +191,14 @@
             android:text="TextView"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/textView44"
-            app:layout_constraintEnd_toStartOf="@+id/textView44"
+            app:layout_constraintBottom_toBottomOf="@+id/attributevalue4"
+            app:layout_constraintEnd_toStartOf="@+id/attributevalue4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
-            app:layout_constraintTop_toTopOf="@+id/textView44" />
+            app:layout_constraintTop_toTopOf="@+id/attributevalue4" />
 
         <TextView
-            android:id="@+id/textView44"
+            android:id="@+id/attributevalue4"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
@@ -214,23 +209,23 @@
             android:textColor="@color/orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView33" />
+            app:layout_constraintStart_toEndOf="@+id/attributename4"
+            app:layout_constraintTop_toBottomOf="@+id/attributevalue3" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/textView4"
-            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintBottom_toBottomOf="@+id/attributename4"
+            app:layout_constraintEnd_toStartOf="@+id/attributename4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView4"
+            app:layout_constraintTop_toTopOf="@+id/attributename4"
             app:srcCompat="@drawable/arrow" />
 
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/attributename5"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
 
@@ -238,14 +233,14 @@
             android:text="TextView"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/textView55"
-            app:layout_constraintEnd_toStartOf="@+id/textView55"
+            app:layout_constraintBottom_toBottomOf="@+id/attributevalue5"
+            app:layout_constraintEnd_toStartOf="@+id/attributevalue5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/textView55" />
+            app:layout_constraintTop_toTopOf="@+id/attributevalue5" />
 
         <TextView
-            android:id="@+id/textView55"
+            android:id="@+id/attributevalue5"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
@@ -258,18 +253,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView44" />
+            app:layout_constraintStart_toEndOf="@+id/attributename5"
+            app:layout_constraintTop_toBottomOf="@+id/attributevalue4" />
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/textView5"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
+            app:layout_constraintBottom_toBottomOf="@+id/attributename5"
+            app:layout_constraintEnd_toStartOf="@+id/attributename5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
+            app:layout_constraintTop_toTopOf="@+id/attributename5"
             app:srcCompat="@drawable/arrow" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
