--- a/app/src/main/res/layout/grid_view_layout_marketdeckcards.xml
+++ b/app/src/main/res/layout/grid_view_layout_marketdeckcards.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grid_view_layout_marketdeck"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/relativeLayout"
         android:layout_width="174dp"
-        android:layout_height="wrap_content">
+        android:layout_height="260dp">
 
         <ImageView
             android:id="@+id/market_icon_image_viewcards"
@@ -21,8 +22,8 @@
             android:layout_height="200dp"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
-            android:src="@drawable/letter_a"
             android:foregroundGravity="center_vertical|clip_horizontal|center"
+            android:src="@drawable/letter_a"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,67 +38,6 @@
             app:layout_constraintEnd_toEndOf="@+id/market_icon_image_viewcards"
             app:layout_constraintStart_toStartOf="@+id/market_icon_image_viewcards"
             app:layout_constraintTop_toBottomOf="@+id/market_icon_image_viewcards" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/textView5"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center|center_horizontal"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/textView6"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/textView1"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView1"
-            app:layout_constraintTop_toBottomOf="@+id/textView1" />
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center|center_horizontal"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/market_title_text_viewcards"
-            app:layout_constraintStart_toStartOf="@+id/market_title_text_viewcards"
-            app:layout_constraintTop_toBottomOf="@+id/market_title_text_viewcards" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:gravity="center"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView7"
-            app:layout_constraintHorizontal_bias="0.505"
-            app:layout_constraintStart_toStartOf="@+id/textView7"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
