--- a/app/src/main/res/drawable/rounded_edittext_register_login.xml
+++ b/app/src/main/res/drawable/rounded_edittext_register_login.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item >
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#951C1C1C" />
+            <corners android:radius="5dp"/>
+        </shape>
 
-    <solid android:color="@android:color/white"/>
-    <corners android:radius="25dp"/>
 
-</shape>
+    </item>
+    <item android:right="5dp" android:left="5dp" android:bottom="10dp" android:top="2dp">
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#D04816"/>
+            <corners android:radius="25dp"/>
+        </shape>
+    </item>
+</layer-list>
