--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -60,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_login_password" />
 
     <TextView
-        android:id="@+id/login_sign_up"
+        android:id="@+id/login_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -99,7 +100,7 @@
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password"
         app:srcCompat="@drawable/or" />
 
     <ImageView
@@ -123,7 +124,7 @@
         app:srcCompat="@drawable/facebook" />
 
     <TextView
-        android:id="@+id/login_sign_in"
+        android:id="@+id/login_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -143,7 +144,6 @@
         android:layout_marginTop="100dp"
         android:text="@string/new_sign_up"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/login_sign_in"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
