--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,4 +53,40 @@
     </style>
 
 
+    <style name="alina_smith">
+
+        <item name="android:textSize">
+            24sp
+        </item>
+
+        <item name="android:letterSpacing">
+            0.01
+        </item>
+
+        <item name="android:textColor">
+            #12121F
+        </item>
+
+    </style>
+
+    <!--
+          Font family: Montserrat
+          Line height: 20sp
+        -->
+
+    <style name="hi_i_m_alin">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:letterSpacing">
+            0.02
+        </item>
+
+        <item name="android:textColor">
+            #AFAFBD
+        </item>
+
+    </style>
 </resources>
