--- a/app/src/main/res/layout/activity_ingame.xml
+++ b/app/src/main/res/layout/activity_ingame.xml
@@ -39,6 +39,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/turntext" />
 
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/lower"
         android:layout_width="wrap_content"
@@ -426,5 +428,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.382" />
+
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/deck_shuffle"
+        android:layout_width="89dp"
+        android:layout_height="85dp"
+        android:background="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:lottie_speed="1" />
+
+    <TextView
+        android:id="@+id/decksize"
+        android:layout_width="51dp"
+        android:layout_height="21dp"
+        android:fontFamily="@font/bold"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/deck_shuffle"
+        app:layout_constraintEnd_toEndOf="@+id/deck_shuffle"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/deck_shuffle"
+        app:layout_constraintTop_toTopOf="@+id/deck_shuffle"
+        app:layout_constraintVertical_bias="0.421" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
