--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,73 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center|center_horizontal"
     android:background="#000000">
 
-
-    <View
-        android:id="@+id/base"
-        android:layout_width="357dp"
-        android:layout_height="378dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/rounded_edittext_register_login"
-        android:elevation="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="361dp"
+        android:layout_height="387dp"
+        android:layout_marginTop="104dp"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.127" />
+        app:srcCompat="@drawable/frame" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/myCardView"
-        android:background="@drawable/circle_profile"
-        android:elevation="60dp"
-        app:layout_constraintBottom_toBottomOf="@+id/base"
-        app:layout_constraintEnd_toEndOf="@+id/base"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/base"
-        app:layout_constraintTop_toTopOf="@+id/base"
-        app:layout_constraintVertical_bias="0.205"
-        android:layout_height="232dp"
-        android:layout_width="232dp"
-        app:cardPreventCornerOverlap="false"
-        >
-        <ImageView
-            android:id="@+id/roundedimag"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            />
-    </com.google.android.material.card.MaterialCardView>
-
-    <View
-        android:id="@+id/level"
-        android:layout_width="360dp"
-        android:layout_height="93dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="56dp"
-        android:background="@drawable/rounded_edittext_register_login"
-        android:elevation="44dp"
-        app:layout_constraintEnd_toEndOf="@+id/base"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="@+id/base"
-        app:layout_constraintTop_toBottomOf="@+id/base" />
-
-    <TextView
-        android:id="@+id/profile_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:fontFamily="@font/bold"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/myCardView"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/myCardView"
-        app:layout_constraintTop_toBottomOf="@+id/myCardView" />
-
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="340dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="44dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:srcCompat="@drawable/frame" />
 </androidx.constraintlayout.widget.ConstraintLayout>
